<resources>
    <string name="app_name">ResourceDatabase</string>

    <string name="lbl_title">Resource Database\nBy:
        Cameron Fenton, Matthew Lepain, James Kerr, Timothy Patton</string>
    <string name="lbl_contents">Retrieved string from code: \n</string>
    <string name="lbl_link">QR code containing our projects web address:</string>

    <string name="btn_scan">Scan</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_databaseReader">Open Database Reader</string>
    <string name="btn_newUser">Register New User</string>

    <string name="readingDatabase">Reading the Database...</string>

    <string name="newUser">Resource Database\nNew User Register</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="verifyPassword">Verify your password:</string>
    <string name="register">Register\nNew User</string>

    <string name="lblChanger">Resource Status Changer</string>
    <string name="btn_changeStatus">Change resource status</string>

    <string name="lbl_reader">Database Reader</string>

    <string name="lbl_login">Login to Resource Database</string>
    <string name="btn_login">Login</string>

    <string-array name="resources">

        <item>NetbookCart1</item>
        <item>NetbookCart2</item>

    </string-array>

    <string-array name="states">

        <item>true</item>
        <item>false</item>

    </string-array>



</resources>
