<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan"
        android:layout_above="@+id/btnDatabaseReader"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/websiteQR"
        android:layout_toEndOf="@+id/websiteQR" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_exit" />

    <TextView
        android:id="@+id/lblContents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_contents"
        android:layout_below="@+id/lblTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnScan"
        android:layout_alignRight="@+id/btnScan"
        android:layout_alignEnd="@+id/btnScan" />

    <ImageView
        android:id="@+id/websiteQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/our_website_link"
        android:contentDescription="" />

    <TextView
        android:id="@+id/lblLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_link"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignBaseline="@+id/btnScan"
        android:layout_alignBottom="@+id/btnScan"
        android:layout_toLeftOf="@+id/btnScan"
        android:layout_toStartOf="@+id/btnScan" />

    <Button
        android:id="@+id/btnDatabaseReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/websiteQR"
        android:layout_toEndOf="@+id/websiteQR"
        android:text="@string/btn_databaseReader"
        android:layout_toRightOf="@+id/websiteQR" />

    <Button
        android:id="@+id/btnDatabaseWriter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDatabaseReader"
        android:layout_alignLeft="@+id/btnDatabaseReader"
        android:layout_alignRight="@+id/btnDatabaseReader"
        android:layout_alignStart="@+id/btnDatabaseReader"
        android:layout_below="@+id/btnDatabaseReader"
        android:layout_toEndOf="@+id/btnScan"
        android:layout_toRightOf="@+id/btnScan"
        android:text="@string/btn_newUser" />

    <Button
        android:id="@+id/btnDatabaseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_changeStatus"
        android:layout_below="@+id/btnDatabaseWriter"
        android:layout_toRightOf="@+id/websiteQR"
        android:layout_toEndOf="@+id/websiteQR" />

</RelativeLayout>
