<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/title">

    <TextView android:text="@string/lbl_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan"
        android:id="@+id/btnScan"
        android:layout_marginTop="95dp"
        android:layout_below="@+id/lblTitle"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:id="@+id/btnExit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_contents"
        android:id="@+id/lblContents"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/btnScan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/websiteQR"
        android:background="@drawable/our_website_link"
        android:layout_above="@+id/btnExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_link"
        android:id="@+id/lblLink"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lblContents"
        android:layout_alignEnd="@+id/lblContents" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_databaseReader"
        android:id="@+id/btnDatabaseReader"
        android:layout_alignTop="@+id/websiteQR"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/btnScan"
        android:layout_toEndOf="@+id/btnScan" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_databaseWriter"
        android:id="@+id/btnDatabaseWriter"
        android:layout_below="@+id/btnDatabaseReader"
        android:layout_alignRight="@+id/btnDatabaseReader"
        android:layout_alignEnd="@+id/btnDatabaseReader"
        android:layout_toEndOf="@+id/btnScan"
        android:layout_toRightOf="@+id/btnScan"
        android:layout_alignLeft="@+id/btnDatabaseReader"
        android:layout_alignStart="@+id/btnDatabaseReader" />

</RelativeLayout>
