<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblTitle"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="78dp"
        android:text="@string/username"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblUsername"
        android:layout_alignStart="@+id/lblUsername"
        android:layout_below="@+id/lblUsername"
        android:layout_marginTop="37dp"
        android:text="@string/password"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblVerfiyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPassword"
        android:layout_alignStart="@+id/lblPassword"
        android:layout_centerVertical="true"
        android:text="@string/verifyPassword"
        android:textSize="22sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername"
        android:layout_above="@+id/lblPassword"
        android:layout_toRightOf="@+id/lblUsername"
        android:layout_toEndOf="@+id/lblUsername"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:layout_alignBottom="@+id/lblPassword"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtVerifyPassword"
        android:layout_below="@+id/lblVerfiyPassword"
        android:layout_alignLeft="@+id/lblVerfiyPassword"
        android:layout_alignStart="@+id/lblVerfiyPassword"
        android:layout_marginTop="32dp"
        android:layout_alignRight="@+id/lblTitle"
        android:layout_alignEnd="@+id/lblTitle"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/txtVerifyPassword"
        android:layout_alignRight="@+id/txtVerifyPassword"
        android:layout_alignEnd="@+id/txtVerifyPassword"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExit"
        android:id="@+id/btnExitRegister"
        android:layout_below="@+id/btnRegister"
        android:layout_alignRight="@+id/lblTitle"
        android:layout_alignEnd="@+id/lblTitle" />

</RelativeLayout>